13_K8S_Cluster_Deployment/doc/ingress-tomcat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: example.atguigu.com
    http:
      paths:
        - backend:
            serviceName: tomcat6
            servicePort: 80
